# pyHWM14

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENTS.md  MIGRATION_PLAN_PY312.md  Makefile  README.md  README.rst  TEST_FIXES.md  meson.build  pyproject.toml  run_tests.sh  setup.py  setup_new.py
.github/workflows/: ci.yaml
examples/: README.md  retrieve_values.py
pyhwm2014/: __init__.py  core.py  data.py  meson.build  plotting.py  pyhwm14.py
scripts/: example01.py  example02.py  example03.py  example04.py  example11.py  example12.py  example14.py  example16.py  example16b.py  pyhwm14Demo.py  pyhwmapps.py  retrieve.py
source/: pyhwm14.py
tests/: __init__.py  conftest.py  test.py  test_core.py  test_plotting.py
