[build-system]
requires = ["scikit-build-core", "numpy", "meson"]
build-backend = "scikit_build_core.build"

[project]
name = "pyhwm2014"
version = "1.1.0"
description = "HWM14 neutral winds model"
readme = "README.rst"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Ronald Ilma", email = "rilma@example.com"}
]
keywords = ["HWM14", "wind model", "atmospheric science"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.23",
    "timeutil",
]

[project.optional-dependencies]
plot = ["matplotlib", "seaborn"]
dev = ["coverage", "nose"]

[project.urls]
"Homepage" = "https://github.com/rilma/pyHWM14"
"Bug Tracker" = "https://github.com/rilma/pyHWM14/issues"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["pyhwm2014"]
