[build-system]
requires = ["scikit-build-core", "numpy", "meson"]
build-backend = "scikit_build_core.build"

[project]
name = "pyhwm2014"
version = "1.1.0"
description = "HWM14 neutral winds model"
readme = "README.rst"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Ronald Ilma", email = "rilma@example.com"}
]
keywords = ["HWM14", "wind model", "atmospheric science"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.23",
    "timeutil",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8", "seaborn>=0.12"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "mypy>=1.7", "ruff>=0.1", "black>=23.12"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0"]

[project.urls]
"Homepage" = "https://github.com/rilma/pyHWM14"
"Bug Tracker" = "https://github.com/rilma/pyHWM14/issues"
"Documentation" = "https://github.com/rilma/pyHWM14/blob/main/README.rst"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["pyhwm2014"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
strict_equality = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long (black handles this)

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
source = ["pyhwm2014"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2

